# ratatui-bracket-terminal

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: test.yml
examples/: bterm.rs  draw_batch.rs
examples/common/: ui.rs
src/: bterm.rs  colours.rs  draw_batch.rs  lib.rs
