[package]
name = "ratatui-bracket-terminal"
version = "0.1.2"
edition = "2021"
description = "Ratatui backends for Bracket Terminal"
license-file = "LICENCE.txt"
readme = "README.md"
keywords = ["tui", "terminal", "ascii", "cp437", "gamedev"]
repository = "https://github.com/theq629/ratatui-bracket-terminal"

[dependencies]
bracket-terminal = { version = "0.8" }
ratatui = { version="0.29", default-features=false }
object-pool = "0.5" # used by bracket-terminal, but we need the interface

[dev-dependencies]
rand = "0.9"
